Update gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 LaproscopicProject2/Temp/
 LaproscopicProject2/HoloApp
 LaproscopicProject2/Library/
-UnityProjet/Library/
+UnityProject/Library/
 UnityProject/Temp/
 UnityProject/HoloApp
 
