--- a/LaproscopicProject2/LaproscopicProject2.csproj
+++ b/LaproscopicProject2/LaproscopicProject2.csproj
@@ -81,6 +81,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\CreatePlane.cs" />
     <Compile Include="Assets\Scripts\Calibration Scripts\AnchorPersistence.cs" />
     <Compile Include="Assets\Scripts\Calibration Scripts\AutoAlignToPoster.cs" />
     <Compile Include="Assets\Scripts\Calibration Scripts\CalibrationZone.cs" />
@@ -97,6 +98,10 @@
     <Compile Include="Assets\Scripts\InstrumentMovement.cs" />
     <Compile Include="Assets\Scripts\ReferenceCalibration.cs" />
     <Compile Include="Assets\Scripts\SpeechManager.cs" />
+    <Compile Include="Assets\Scripts\UseRenderingPlugin.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\Scripts\Shader\DemoShader.shader" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
