Add backface cull off to the shader to solve issue with invisible mesh from th other side the mesh; Add control script to the RealSense View to enable manual calibration of Depth Camra view

--- a/LaproscopicProject2/LaproscopicProject2.csproj
+++ b/LaproscopicProject2/LaproscopicProject2.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Assets\Scripts\HoloHelper.cs" />
     <Compile Include="Assets\Scripts\HoloReceiver.cs" />
     <Compile Include="Assets\Scripts\InstrumentMovement.cs" />
+    <Compile Include="Assets\Scripts\RSManualCalib.cs" />
     <Compile Include="Assets\Scripts\ReferenceCalibration.cs" />
     <Compile Include="Assets\Scripts\SpeechManager.cs" />
     <Compile Include="Assets\Scripts\UseRenderingPlugin.cs" />
