remove ipch folder and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ RealSensePluginSource/projects/CameraViewer/build/
 RealSensePluginSource/build/
 CAST_Customized/Debug/
 CAST_Customized/Release/
+CAST_Customized/ipch/
