build success for cutomized project; was able to get data from the left and right instruments and print them out once every second; The left instrument position is not correct

--- a/CAST_Customized/CAST_Customized/CAST_Customized.vcxproj
+++ b/CAST_Customized/CAST_Customized/CAST_Customized.vcxproj
@@ -93,6 +93,7 @@
     <ClInclude Include="Usb4Device.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CASTMain_SendOpt.cpp" />
     <ClCompile Include="FixtureConfigEditor.cpp" />
     <ClCompile Include="Hardware.cpp" />
     <ClCompile Include="jsoncpp.cpp" />
