--- a/CAST_Customized/CAST_Customized/CAST_Customized.vcxproj
+++ b/CAST_Customized/CAST_Customized/CAST_Customized.vcxproj
@@ -89,6 +89,7 @@
     <ClInclude Include="Hardware.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="UDPSender.h" />
     <ClInclude Include="USB4.h" />
     <ClInclude Include="Usb4Device.h" />
   </ItemGroup>
@@ -100,6 +101,7 @@
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="UDPSender.cpp" />
     <ClCompile Include="Usb4Device.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
