the second part of previous commit with CAST config file adjusted, now can get input from both instruments correctly

--- a/CameraCalibration/CameraCalibration/CameraCalibration.vcxproj
+++ b/CameraCalibration/CameraCalibration/CameraCalibration.vcxproj
@@ -151,7 +151,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="aruco_detection.cpp" />
     <ClCompile Include="camera_calibration.cpp" />
+    <ClCompile Include="create_marker.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
