Use rotation matrix and translation vector from aruco_detection.cpp in Unity via Quaternion lookat rotation to automatically calibrate the depth camera; change the 3D reconstruction shader to solve the bug in rotation around z axis

--- a/LaproscopicProject2/LaproscopicProject2.csproj
+++ b/LaproscopicProject2/LaproscopicProject2.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Assets\Scripts\Calibration Scripts\PosterDetectorAPI.cs" />
     <Compile Include="Assets\Scripts\Calibration Scripts\WorldPositionFromRays.cs" />
     <Compile Include="Assets\Scripts\Calibration Scripts\ZoneCalibrationManager.cs" />
+    <Compile Include="Assets\Scripts\CameraCalibration.cs" />
     <Compile Include="Assets\Scripts\CastReceiver.cs" />
     <Compile Include="Assets\Scripts\HoloHelper.cs" />
     <Compile Include="Assets\Scripts\HoloReceiver.cs" />
