--- a/RealSensePluginSource/projects/VisualStudio2015/RenderingPlugin.vcxproj
+++ b/RealSensePluginSource/projects/VisualStudio2015/RenderingPlugin.vcxproj
@@ -231,16 +231,16 @@ ENDLOCAL
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
-      <AdditionalIncludeDirectories>$(ProjectDir);$(GeneratedFilesDir);$(IntDir);.;include;res;$(RSSDK_DIR)/include;$(RSSDK_DIR)/sample/core/common/include;$(RSSDK_DIR)/sample/core/common/include;C:\Users\xsq4525\Documents\Laparoscopic_Research\RealSensePluginSource\projects\CameraViewer;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir);$(GeneratedFilesDir);$(IntDir);.;include;res;$(RSSDK_DIR)/include;$(RSSDK_DIR)/sample/core/common/include;C:\Users\xsq4525\Documents\Laparoscopic_Research\RealSensePluginSource\projects\CameraViewer;$(OPENCV_DIR)\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>opengl32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;WindowsApp.lib;libpxcmd.lib;libpxcutilsmd.lib;CameraViewer.cpp.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opengl32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;WindowsApp.lib;libpxcmd.lib;libpxcutilsmd.lib;CameraViewer.cpp.lib;opencv_calib3d330.lib;opencv_aruco330.lib;opencv_core330.lib;opencv_features2d330.lib;opencv_flann330.lib;opencv_highgui330.lib;opencv_imgproc330.lib;opencv_imgcodecs330.lib;opencv_ml330.lib;opencv_objdetect330.lib;opencv_photo330.lib;opencv_stitching330.lib;opencv_superres330.lib;opencv_ts330.lib;opencv_video330.lib;opencv_videoio330.lib;opencv_videostab330.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
       <OptimizeReferences>true</OptimizeReferences>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <ModuleDefinitionFile>../../source/RenderingPlugin.def</ModuleDefinitionFile>
-      <AdditionalLibraryDirectories>$(RSSDK_DIR)/lib/$(PlatformName);$(RSSDK_DIR)/sample/core/common/lib/$(PlatformName)/$(PlatformToolset);C:\Users\xsq4525\Documents\Laparoscopic_Research\RealSensePluginSource\projects\CameraViewer\bin\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(RSSDK_DIR)/lib/$(PlatformName);$(RSSDK_DIR)/sample/core/common/lib/$(PlatformName)/$(PlatformToolset);C:\Users\xsq4525\Documents\Laparoscopic_Research\RealSensePluginSource\projects\CameraViewer\bin\x64;$(OPENCV_DIR)\lib\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <OutputFile>$(OutDir)$(TargetName)$(TargetExt)</OutputFile>
     </Link>
     <PostBuildEvent>
