--- a/LaproscopicProject2/LaproscopicProject2.csproj
+++ b/LaproscopicProject2/LaproscopicProject2.csproj
@@ -12,7 +12,7 @@
     <ProjectTypeGuids>{E097FAD1-6243-4DAD-9C02-E9B9EFC3FFC1};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
+    <TargetFrameworkProfile>Unity Full v3.5</TargetFrameworkProfile>
     <CompilerResponseFile></CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>WSAPlayer:21</UnityBuildTarget>
@@ -82,6 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\CreatePlane.cs" />
+    <Compile Include="Assets\Scripts\ArduinoReceiver.cs" />
     <Compile Include="Assets\Scripts\Calibration Scripts\AnchorPersistence.cs" />
     <Compile Include="Assets\Scripts\Calibration Scripts\AutoAlignToPoster.cs" />
     <Compile Include="Assets\Scripts\Calibration Scripts\CalibrationZone.cs" />
